project-api/project-api-test/src/test/resources/compiler_plugin_tests/negative_cases/package_that_imports_plugin_1/main.bal
import samjs/package_compiler_plugin_1 as _;

public function main() {
}
